--- a/profiles.yml
+++ b/profiles.yml
@@ -4,12 +4,12 @@ Hackathon:
     outputs:
         Snowflake_DB:
             type: snowflake
-            account: [account id]
-            user: [username]
-            password: [password]
-            database: [database name]
-            warehouse: [warehouse name]
-            schema: [dbt schema]
+            account: JXGPFAR-REVOLT_PARTNER
+            user: USER_05
+            password: Mattoni1873
+            database: HACKATHON
+            warehouse: HACKATHON_WH
+            schema: TEAM_05
             
         Bigguery_db:
             type: bigquery
